@@ -1,3 +1,8 @@
+2017-08-29  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/82015
+	* gcc.target/powerpc/pr82015.c: New test.
+
 2017-08-29  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.target/i386/*.c: Remove excess braces from target selectors.
