@@ -1,3 +1,15 @@
+2017-08-29  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/82015
+	* config/rs6000/rs6000.c (rs6000_expand_binop_builtin): Insure
+	that the second argument of the built-in functions to unpack
+	128-bit scalar types to 64-bit values is 0 or 1.  Change to use a
+	switch statement instead a lot of if statements.
+	* config/rs6000/rs6000.md (unpack<mode>, FMOVE128_VSX iterator):
+	Allow 64-bit values to be in Altivec registers as well as
+	traditional floating point registers.
+	(pack<mode>, FMOVE128_VSX iterator): Likewise.
+
 2017-08-29  Alexander Monakov  <amonakov@ispras.ru>
 
 	* ira-costs.c (record_address_regs): Handle both operands of PLUS for
